syntax = "proto3";
package brokerageApi;
option go_package = "github.com/mrNobody95/Gate/services/brokerage/api";
import "api/src/misc.proto";
import "api/src/models.proto";

service ResolutionService {
  rpc Set(api.Resolution) returns(api.Void);
  rpc GetByID(GetResolutionByIDRequest) returns (api.Resolution);
  rpc GetByDuration(GetResolutionByDurationRequest) returns (api.Resolution);
  rpc List(GetResolutionListRequest) returns (api.Resolutions);
}

message GetResolutionByIDRequest {
  // @inject_tag: json:"id"
  string ID = 1;
}

message GetResolutionByDurationRequest {
  // @inject_tag: json:"brokerage_id"
  string BrokerageID = 1;
  // @inject_tag: json:"duration"
  int64 Duration = 2;
}

message GetResolutionListRequest {
  // @inject_tag: json:"brokerage_id"
  string BrokerageID = 1;
}